src/objects/Project_Team_Roles__c.object
<CustomObject>
    <description>Junction Object between Project and User</description>
    <fields>
        <fullName>Other_Role__c</fullName>
        <description>Description to enter when &quot;Other&quot; role is selected</description>
        <inlineHelpText>Optional. Enter description only if Project Team Role is selected as Other</inlineHelpText>
        <label>Other Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Team_Role__c</fullName>
        <label>Project Team Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Team_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Project_Team_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Team_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Team Role</label>
    <nameField>
        <displayFormat>PTR - {0000}</displayFormat>
        <label>Project Team Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Other_Role_Desc</fullName>
        <active>true</active>
        <description>Description should be entered if role is selected as Other.</description>
        <errorConditionFormula>ISPICKVAL( Project_Team_Role__c , &apos;Other&apos;) &amp;&amp;
ISBLANK( Other_Role__c )</errorConditionFormula>
        <errorDisplayField>Other_Role__c</errorDisplayField>
        <errorMessage>Mandatory field if selected Project Team Role is Other.</errorMessage>
    </validationRules>
</CustomObject>